--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>Hi</h1>
-<app-post-create></app-post-create>
-<div style="margin:8px;height:20px;width:100%;background:green;"></div>
-<app-post-create-material></app-post-create-material>
+<app-header></app-header>
+<main>
+  <app-post-create></app-post-create>
+  <div style="margin:8px;height:20px;width:100%;background:green;"></div>
+  <app-post-create-material></app-post-create-material>
+</main>
