--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <app-header></app-header>
 <main>
-  <app-post-create></app-post-create>
+  <div style="padding:2rem;">
+    <app-post-create></app-post-create>
+  </div>
   <div style="margin:8px;height:20px;width:100%;background:green;"></div>
-  <app-post-create-material></app-post-create-material>
+  <div style="padding:2rem;">
+    <app-post-create-material></app-post-create-material>
+  </div>
+  <div style="margin:8px;height:20px;width:100%;background:green;"></div>
+  <div style="padding:2rem;">
+    <app-post-list></app-post-list>
+  </div>
 </main>
