--- a/src/app/posts/post-create-material/post-create-material.component.html
+++ b/src/app/posts/post-create-material/post-create-material.component.html
@@ -1,15 +1,43 @@
 <mat-card>
-  <mat-form-field>
-    <input matInput type="text" [(ngModel)]="enteredTitle">
-  </mat-form-field>
-  <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredContent"></textarea>
-  </mat-form-field>
-  <button
-    mat-raised-button
-    color="accent"
-    (click)="onAddPost()">
-    Add it
-  </button>
+  <!--
+  Template-driven Forms
+    * #postForm gives us acces to the Angular form object
+        Angular creates behind the scenes
+    * ngModel in #title gives you access to the data managed
+        by that input
+    * Need ngModel directive on inputs
+  -->
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+    <mat-form-field>
+      <input
+        matInput
+        type="text"
+        name="title"
+        ngModel
+        required
+        #title="ngModel"
+        >
+        <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <textarea
+        matInput
+        rows="6"
+        name="content"
+        ngModel
+        required
+        #content="ngModel"
+        >
+      </textarea>
+      <mat-error *ngIf="content.invalid">Please enter some content</mat-error>
+    </mat-form-field>
+    <button
+      mat-raised-button
+      color="accent"
+      type="submit"
+      >
+      Add it
+    </button>
+  </form>
 </mat-card>
 <br>
