--- a/01/src/app/posts/post-create-material/post-create-material.component.html
+++ b/01/src/app/posts/post-create-material/post-create-material.component.html
@@ -15,6 +15,7 @@
         name="title"
         ngModel
         required
+        placeholder="Post title"
         #title="ngModel"
         >
         <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
@@ -26,6 +27,7 @@
         name="content"
         ngModel
         required
+        placeholder="Post content"
         #content="ngModel"
         >
       </textarea>
