--- a/01/src/app/app.component.html
+++ b/01/src/app/app.component.html
@@ -5,10 +5,10 @@
   </div> -->
   <div style="margin:8px;height:20px;width:100%;background:green;"></div>
   <div style="padding:2rem;">
-    <app-post-create-material (postCreated)="onPostAdded($event)"></app-post-create-material>
+    <app-post-create-material></app-post-create-material>
   </div>
   <div style="margin:8px;height:20px;width:100%;background:green;"></div>
   <div style="padding:2rem;">
-    <app-post-list [posts]="storedPosts"></app-post-list>
+    <app-post-list></app-post-list>
   </div>
 </main>
