--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -7,13 +7,13 @@
         by that input
     * Need ngModel directive on inputs
   -->
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm">
     <mat-form-field>
       <input
         matInput
         type="text"
         name="title"
-        ngModel
+        [ngModel]="post.title"
         required
         placeholder="Post title"
         #title="ngModel"
@@ -25,7 +25,7 @@
         matInput
         rows="6"
         name="content"
-        ngModel
+        [ngModel]="post.content"
         required
         placeholder="Post content"
         #content="ngModel"
