--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -13,7 +13,7 @@
         matInput
         type="text"
         name="title"
-        [ngModel]="post.title"
+        [ngModel]="post?.title"
         required
         placeholder="Post title"
         #title="ngModel"
@@ -25,7 +25,7 @@
         matInput
         rows="6"
         name="content"
-        [ngModel]="post.content"
+        [ngModel]="post?.content"
         required
         placeholder="Post content"
         #content="ngModel"
