--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,4 +1,5 @@
 <mat-card>
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
   <!--
   Template-driven Forms
     * #postForm gives us acces to the Angular form object
@@ -7,7 +8,7 @@
         by that input
     * Need ngModel directive on inputs
   -->
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm">
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
     <mat-form-field>
       <input
         matInput
