--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -21,6 +21,12 @@
         >
         <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
     </mat-form-field>
+
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+      <input type="file" #filePicker>
+    </div>
+
     <mat-form-field>
       <textarea
         matInput
