--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -8,18 +8,16 @@
         by that input
     * Need ngModel directive on inputs
   -->
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
       <input
         matInput
         type="text"
-        name="title"
-        [ngModel]="post?.title"
-        required
+        formControlName="title"
         placeholder="Post title"
-        #title="ngModel"
         >
-        <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+        <mat-error *ngIf="form.get('title').invalid">Please enter a post title</mat-error>
     </mat-form-field>
 
     <div>
@@ -31,22 +29,21 @@
       <textarea
         matInput
         rows="6"
-        name="content"
-        [ngModel]="post?.content"
-        required
+        formControlName="content"
         placeholder="Post content"
-        #content="ngModel"
         >
       </textarea>
-      <mat-error *ngIf="content.invalid">Please enter some content</mat-error>
+      <mat-error *ngIf="form.get('content').invalid">Please enter some content</mat-error>
     </mat-form-field>
+
     <button
       mat-raised-button
       color="accent"
       type="submit"
       >
       Save post
-    </button>
+  </button>
+
   </form>
 </mat-card>
 <br>
